[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maintenance"
version = "1.0.0"
description = "macOS system maintenance orchestrator"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "i3oc9i", email = "i3oc9i@icloud.com" }
]

[project.urls]
Repository = "https://github.com/i3oc9i/maintenance"

[project.scripts]
maintenance = "maintenance:main"

[project.optional-dependencies]
dev = ["poethepoet"]

[tool.poe.tasks]
install = "uv tool install . --force"
clean = "rm -rf dist/ __pycache__/ *.egg-info/"
build = "uv build"
